--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@next/font": "^14.2.14",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
