--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "^14.2.14",
+    "axios": "^1.7.7",
+    "mongoose": "^8.7.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
