--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
+    "node-cron": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
