--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-cron": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
