--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-MONGO = mongodb+srv://draftfantasy:draftfantasy123@uat.qhdnt.mongodb.net/UAT?retryWrites=true&w=majority
+NEXT_PUBLIC_FRONTEND_URL = http://localhost:3000/
+NEXT_PUBLIC_SUPPORT_EMAIL = gogeto931@gmail.com
+
+NEXT_PUBLIC_EMAIL = gogeto931@gmail.com
+NEXT_PUBLIC_EMAIL_PASSWORD = jjomtyaysfuejwfn
+
+NEXT_PUBLIC_BACKEND_URL = http://localhost:3000/api/
+NEXT_PUBLIC_MONGO = mongodb+srv://draftfantasy:draftfantasy123@uat.qhdnt.mongodb.net/UAT?retryWrites=true&w=majority
