--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@next/font": "^14.2.14",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "is-empty": "^1.2.0",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
