--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@ NEXT_PUBLIC_SUPPORT_EMAIL = gogeto931@gmail.com
 NEXT_PUBLIC_EMAIL = gogeto931@gmail.com
 NEXT_PUBLIC_EMAIL_PASSWORD = jjomtyaysfuejwfn
 
+
+NEXT_PUBLIC_ENCRYPTION_SECRET_ADMIN = admin_testing123lmao456testing10_admin
+NEXT_PUBLIC_ENCRYPTION_SECRET_USER = user_testing123lmao456testing10_user
 NEXT_PUBLIC_BACKEND_URL = http://localhost:3000/api/
 NEXT_PUBLIC_MONGO = mongodb+srv://draftfantasy:draftfantasy123@uat.qhdnt.mongodb.net/UAT?retryWrites=true&w=majority
