--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "is-empty": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
+    "next-auth": "^4.24.8",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "react": "^18",
