--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "crons": [
       {
-        "path": "api/cron",
-        "schedule": "*/1 * * * *"
+        "path": "/api/cron",
+        "schedule": "* * * * *"
       }
     ]
   } 
