--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "https": "^1.0.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
