--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "crons": [
       {
-        "path": "/api/cron",
-        "schedule": "*/2 * * * *"
+        "path": "/api/cron/match",
+        "schedule": "*/60 * * * *"
       }
     ]
   } 
