--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "crons": [
       {
-        "path": "/api/cron/match",
+        "path": "/api/cron/live",
         "schedule": "0 * * * *" 
       }
     ]
