--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "autoprefixer": "^10.4.20",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.3"
   }
 }
