--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
