--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
+    "react-select": "^5.8.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "validator": "^13.12.0"
