--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "https": "^1.0.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
