--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "framer-motion": "^12.4.10",
     "https": "^1.0.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
