--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NEXT_PUBLIC_LEAGUE_ID = 8
 NEXT_PUBLIC_NODE_ENV = dev
 
 NEXT_PUBLIC_FRONTEND_URL = http://localhost:3000/
-NEXT_PUBLIC_SUPPORT_EMAIL = gogeto931@gmail.com
+NEXT_PUBLIC_SUPPORT_EMAIL = thefantasydraft@hotmail.com
 
 NEXT_PUBLIC_EMAIL = gogeto931@gmail.com
 NEXT_PUBLIC_EMAIL_PASSWORD = jjomtyaysfuejwfn
