--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ NEXT_PUBLIC_NODE_ENV = dev
 NEXT_PUBLIC_FRONTEND_URL = http://localhost:3000/
 NEXT_PUBLIC_SUPPORT_EMAIL = thefantasydraft@hotmail.com
 
-NEXT_PUBLIC_EMAIL = gogeto931@gmail.com
-NEXT_PUBLIC_EMAIL_PASSWORD = jjomtyaysfuejwfn
+NEXT_PUBLIC_EMAIL = thefantasydraft@hotmail.com
+NEXT_PUBLIC_EMAIL_PASSWORD = Draftlife1
 
 
 NEXT_PUBLIC_ENCRYPTION_SECRET_ADMIN = admin_testing123lmao456testing10_admin
