--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ NEXT_PUBLIC_FRONTEND_URL = http://localhost:3000/
 NEXT_PUBLIC_SUPPORT_EMAIL = thefantasydraft@hotmail.com
 
 NEXT_PUBLIC_EMAIL = thefantasydraft@hotmail.com
-NEXT_PUBLIC_EMAIL_PASSWORD = Draftlife1
+NEXT_PUBLIC_EMAIL_PASSWORD = qdgjbeexbnghcnrk
 
 
 NEXT_PUBLIC_ENCRYPTION_SECRET_ADMIN = admin_testing123lmao456testing10_admin
